# backend/app/schemas/section.py
@@ -12,3 +12,18 @@ class SectionResponse(BaseModel):
     Instructor: int | None
 
     model_config = {"from_attributes": True}
+
+
+class SectionCreate(BaseModel):
+    Schedule: int
+    TimeBlock: int | None = None
+    Course: int
+    Capacity: int
+    Instructor: int | None = None
+
+
+class SectionUpdate(BaseModel):
+    TimeBlock: int | None = None
+    Course: int | None = None
+    Capacity: int | None = None
+    Instructor: int | None = None
